some more javascript and style added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <input type="radio" name="first" value= "right" id="please"><label for="please">Please Please Me</label>
             <input type="radio" name="first" value= "wrong" id="sale"> <label for="sale">Beatles for Sale</label>
             <input type="radio" name="first" value= "wrong" id="with"><label for="with">With the Beatles</label>
-            <li class= 'list' name="submarine">Which of the following beatles is singing in the song Yellow Submarine?</li>
+            <li class= 'list' name="submarine">Which one of the following members is singing in the song Yellow Submarine?</li>
             <input type="radio" name="submarine" value= "wrong" id="george"> <label for="george">George Harrison</label>
             <input type="radio" name="submarine" value= "wrong" id="john"> <label for="john">John Lennon</label>
             <input type="radio" name="submarine" value= "right" id="ringo"><label for="ringo">Ringo Starr</label>
